bin/Sintactico/y.output
   0  $accept : programa $end

   1  programa : conjunto_sentencias

   2  conjunto_sentencias : conj_sentencias_declarativas sentencias_ejecutables
   3                      | conj_sentencias_declarativas
   4                      | sentencias_ejecutables

   5  conj_sentencias_declarativas : sentencia_declarativa
   6                               | sentencia_declarativa conj_sentencias_declarativas

   7  sentencia_declarativa : tipo lista_de_variables ';'
   8                        | sentencia_de_clase

   9  lista_de_variables : lista_de_variables ',' variable
  10                     | variable

  11  variable : ID

  12  $$1 :

  13  sentencia_de_clase : CLASS ID $$1 definicion_clase

  14  $$2 :

  15  sentencia_de_clase : CLASS ID $$2 EXTENDS ID definicion_clase

  16  definicion_clase : BEGIN sentencias_clase END

  17  sentencias_clase : sentencias_clase cuerpo_clase
  18                   | cuerpo_clase

  19  cuerpo_clase : lista_atributos
  20               | metodo_clase

  21  lista_atributos : visibilidad sentencia_declarativa

  22  $$3 :

  23  metodo_clase : visibilidad VOID ID '(' ')' $$3 bloque_anidado_metclase

  24  bloque_anidado_metclase : BEGIN bloque_sentencias END

  25  tipo : FLOAT
  26       | INT
  27       | ID

  28  visibilidad : PUBLIC
  29              | PRIVATE

  30  sentencias_ejecutables : BEGIN bloque_sentencias END ';'
  31                         | error bloque_sentencias END ';'
  32                         | BEGIN bloque_sentencias error ';'
  33                         | BEGIN bloque_sentencias END error

  34  bloque_sentencias : bloque_sentencias sentencia
  35                    | sentencia

  36  sentencia : ejecucion

  37  ejecucion : iteracion
  38            | seleccion
  39            | print
  40            | asig
  41            | invocacion_metodo_clase

  42  invocacion_metodo_clase : ID '.' ID '(' ')' ';'
  43                          | error_inv_metodo_clase

  44  error_inv_metodo_clase : error '.' ID '(' ')' ';'
  45                         | ID '.' error '(' ')' ';'
  46                         | ID '.' error ')' ';'
  47                         | ID '.' ID '(' error ';'
  48                         | ID '.' ID '(' ')' error

  49  print : PRINT '(' CADENA ')' ';'
  50        | error_print

  51  error_print : PRINT error CADENA ')' ';'
  52              | PRINT '(' CADENA error ';'
  53              | PRINT '(' CADENA ')' error

  54  $$4 :

  55  $$5 :

  56  iteracion : WHILE $$4 '(' condicion ')' $$5 DO bloque_anidado_while
  57            | error_iteracion

  58  error_iteracion : WHILE error condicion ')' DO bloque_anidado_while

  59  $$6 :

  60  condicion : expresion $$6 comparador expresion

  61  bloque_anidado_while : sentencia
  62                       | BEGIN bloque_sentencias END
  63                       | BEGIN bloque_sentencias error
  64                       | error bloque_sentencias END

  65  comparador : '<'
  66             | '>'
<<<<<<< HEAD
  67             | C_MAYORIGUAL
  68             | C_MENORIGUAL
  69             | C_DISTINTO
  70             | C_IGUAL

  71  seleccion : if_condicion END_IF

  72  $$7 :

  73  seleccion : if_condicion $$7 ELSE bloque_anidado_if END_IF

  74  $$8 :

  75  if_condicion : IF '(' condicion ')' $$8 bloque_anidado_if
  76               | IF condicion ')' bloque_anidado_if
  77               | IF '(' condicion bloque_anidado_if
  78               | IF condicion bloque_anidado_if

  79  bloque_anidado_if : sentencia
  80                    | BEGIN bloque_sentencias END
  81                    | BEGIN bloque_sentencias error
  82                    | error bloque_sentencias END

  83  asig : ID ASIGNACION expresion ';'
  84       | ID '.' ID ASIGNACION expresion ';'
  85       | ID expresion ';'
  86       | error ASIGNACION expresion ';'
  87       | ID ASIGNACION expresion

  88  expresion : expresion '+' termino
  89            | expresion '-' termino
  90            | termino

  91  termino : termino '*' factor
  92          | termino '/' factor
  93          | factor

  94  factor : ID
  95         | ID '.' ID
  96         | cte

  97  cte : CTE
  98      | '-' CTE
  99      | CTEFLOAT
 100      | '-' CTEFLOAT
=======
  67             | '='
  68             | C_MAYORIGUAL
  69             | C_MENORIGUAL
  70             | C_DISTINTO
  71             | C_IGUAL

  72  seleccion : if_condicion END_IF

  73  $$7 :

  74  seleccion : if_condicion $$7 ELSE bloque_anidado_if END_IF

  75  $$8 :

  76  if_condicion : IF '(' condicion ')' $$8 bloque_anidado_if
  77               | IF condicion ')' bloque_anidado_if
  78               | IF '(' condicion bloque_anidado_if
  79               | IF condicion bloque_anidado_if

  80  bloque_anidado_if : sentencia
  81                    | BEGIN bloque_sentencias END
  82                    | BEGIN bloque_sentencias error
  83                    | error bloque_sentencias END

  84  asig : ID ASIGNACION expresion ';'
  85       | ID '.' ID ASIGNACION expresion ';'
  86       | ID expresion ';'
  87       | error ASIGNACION expresion ';'
  88       | ID ASIGNACION expresion

  89  expresion : expresion '+' termino
  90            | expresion '-' termino
  91            | termino

  92  termino : termino '*' factor
  93          | termino '/' factor
  94          | factor

  95  factor : ID
  96         | ID '.' ID
  97         | cte

  98  cte : CTE
  99      | '-' CTE
 100      | CTEFLOAT
 101      | '-' CTEFLOAT
>>>>>>> RobertoPintos-patch-1

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	INT  shift 3
	BEGIN  shift 4
	CLASS  shift 5
	FLOAT  shift 6
	.  error

	programa  goto 7
	conjunto_sentencias  goto 8
	conj_sentencias_declarativas  goto 9
	sentencias_ejecutables  goto 10
	sentencia_declarativa  goto 11
	tipo  goto 12
	sentencia_de_clase  goto 13


state 1
	sentencias_ejecutables : error . bloque_sentencias END ';'  (31)

	error  shift 14
	ID  shift 15
	IF  shift 16
	PRINT  shift 17
	WHILE  shift 18
	.  error

	bloque_sentencias  goto 19
	sentencia  goto 20
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	error_iteracion  goto 29
	if_condicion  goto 30


state 2
	tipo : ID .  (27)

	.  reduce 27


state 3
	tipo : INT .  (26)

	.  reduce 26


state 4
	sentencias_ejecutables : BEGIN . bloque_sentencias END ';'  (30)
	sentencias_ejecutables : BEGIN . bloque_sentencias error ';'  (32)
	sentencias_ejecutables : BEGIN . bloque_sentencias END error  (33)

	error  shift 14
	ID  shift 15
	IF  shift 16
	PRINT  shift 17
	WHILE  shift 18
	.  error

	bloque_sentencias  goto 31
	sentencia  goto 20
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	error_iteracion  goto 29
	if_condicion  goto 30


state 5
	sentencia_de_clase : CLASS . ID $$1 definicion_clase  (13)
	sentencia_de_clase : CLASS . ID $$2 EXTENDS ID definicion_clase  (15)

	ID  shift 32
	.  error


state 6
	tipo : FLOAT .  (25)

	.  reduce 25


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	programa : conjunto_sentencias .  (1)

	.  reduce 1


state 9
	conjunto_sentencias : conj_sentencias_declarativas . sentencias_ejecutables  (2)
	conjunto_sentencias : conj_sentencias_declarativas .  (3)

	error  shift 1
	BEGIN  shift 4
	$end  reduce 3

	sentencias_ejecutables  goto 33


state 10
	conjunto_sentencias : sentencias_ejecutables .  (4)

	.  reduce 4


state 11
	conj_sentencias_declarativas : sentencia_declarativa .  (5)
	conj_sentencias_declarativas : sentencia_declarativa . conj_sentencias_declarativas  (6)

	ID  shift 2
	INT  shift 3
	CLASS  shift 5
	FLOAT  shift 6
	$end  reduce 5
	error  reduce 5
	BEGIN  reduce 5

	conj_sentencias_declarativas  goto 34
	sentencia_declarativa  goto 11
	tipo  goto 12
	sentencia_de_clase  goto 13


state 12
	sentencia_declarativa : tipo . lista_de_variables ';'  (7)

	ID  shift 35
	.  error

	lista_de_variables  goto 36
	variable  goto 37


state 13
	sentencia_declarativa : sentencia_de_clase .  (8)

	.  reduce 8


state 14
	error_inv_metodo_clase : error . '.' ID '(' ')' ';'  (44)
<<<<<<< HEAD
	asig : error . ASIGNACION expresion ';'  (86)
=======
	asig : error . ASIGNACION expresion ';'  (87)
>>>>>>> RobertoPintos-patch-1

	ASIGNACION  shift 38
	'.'  shift 39
	.  error


state 15
	invocacion_metodo_clase : ID . '.' ID '(' ')' ';'  (42)
	error_inv_metodo_clase : ID . '.' error '(' ')' ';'  (45)
	error_inv_metodo_clase : ID . '.' error ')' ';'  (46)
	error_inv_metodo_clase : ID . '.' ID '(' error ';'  (47)
	error_inv_metodo_clase : ID . '.' ID '(' ')' error  (48)
<<<<<<< HEAD
	asig : ID . ASIGNACION expresion ';'  (83)
	asig : ID . '.' ID ASIGNACION expresion ';'  (84)
	asig : ID . expresion ';'  (85)
	asig : ID . ASIGNACION expresion  (87)
=======
	asig : ID . ASIGNACION expresion ';'  (84)
	asig : ID . '.' ID ASIGNACION expresion ';'  (85)
	asig : ID . expresion ';'  (86)
	asig : ID . ASIGNACION expresion  (88)
>>>>>>> RobertoPintos-patch-1

	ID  shift 40
	CTE  shift 41
	ASIGNACION  shift 42
	CTEFLOAT  shift 43
	'.'  shift 44
	'-'  shift 45
	.  error

	expresion  goto 46
	termino  goto 47
	factor  goto 48
	cte  goto 49


state 16
<<<<<<< HEAD
	if_condicion : IF . '(' condicion ')' $$8 bloque_anidado_if  (75)
	if_condicion : IF . condicion ')' bloque_anidado_if  (76)
	if_condicion : IF . '(' condicion bloque_anidado_if  (77)
	if_condicion : IF . condicion bloque_anidado_if  (78)
=======
	if_condicion : IF . '(' condicion ')' $$8 bloque_anidado_if  (76)
	if_condicion : IF . condicion ')' bloque_anidado_if  (77)
	if_condicion : IF . '(' condicion bloque_anidado_if  (78)
	if_condicion : IF . condicion bloque_anidado_if  (79)
>>>>>>> RobertoPintos-patch-1

	ID  shift 40
	CTE  shift 41
	CTEFLOAT  shift 43
	'('  shift 50
	'-'  shift 45
	.  error

	condicion  goto 51
	expresion  goto 52
	termino  goto 47
	factor  goto 48
	cte  goto 49


state 17
	print : PRINT . '(' CADENA ')' ';'  (49)
	error_print : PRINT . error CADENA ')' ';'  (51)
	error_print : PRINT . '(' CADENA error ';'  (52)
	error_print : PRINT . '(' CADENA ')' error  (53)

	error  shift 53
	'('  shift 54
	.  error


state 18
	iteracion : WHILE . $$4 '(' condicion ')' $$5 DO bloque_anidado_while  (56)
	error_iteracion : WHILE . error condicion ')' DO bloque_anidado_while  (58)
	$$4 : .  (54)

	error  shift 55
	'('  reduce 54

	$$4  goto 56


state 19
	sentencias_ejecutables : error bloque_sentencias . END ';'  (31)
	bloque_sentencias : bloque_sentencias . sentencia  (34)

	error  shift 14
	ID  shift 15
	IF  shift 16
	END  shift 57
	PRINT  shift 17
	WHILE  shift 18
	.  error

	sentencia  goto 58
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	error_iteracion  goto 29
	if_condicion  goto 30


state 20
	bloque_sentencias : sentencia .  (35)

	.  reduce 35


state 21
	sentencia : ejecucion .  (36)

	.  reduce 36


state 22
	ejecucion : iteracion .  (37)

	.  reduce 37


state 23
	ejecucion : seleccion .  (38)

	.  reduce 38


state 24
	ejecucion : print .  (39)

	.  reduce 39


state 25
	ejecucion : asig .  (40)

	.  reduce 40


state 26
	ejecucion : invocacion_metodo_clase .  (41)

	.  reduce 41


state 27
	invocacion_metodo_clase : error_inv_metodo_clase .  (43)

	.  reduce 43


state 28
	print : error_print .  (50)

	.  reduce 50


state 29
	iteracion : error_iteracion .  (57)

	.  reduce 57


state 30
<<<<<<< HEAD
	seleccion : if_condicion . END_IF  (71)
	seleccion : if_condicion . $$7 ELSE bloque_anidado_if END_IF  (73)
	$$7 : .  (72)

	END_IF  shift 59
	ELSE  reduce 72
=======
	seleccion : if_condicion . END_IF  (72)
	seleccion : if_condicion . $$7 ELSE bloque_anidado_if END_IF  (74)
	$$7 : .  (73)

	END_IF  shift 59
	ELSE  reduce 73
>>>>>>> RobertoPintos-patch-1

	$$7  goto 60


state 31
	sentencias_ejecutables : BEGIN bloque_sentencias . END ';'  (30)
	sentencias_ejecutables : BEGIN bloque_sentencias . error ';'  (32)
	sentencias_ejecutables : BEGIN bloque_sentencias . END error  (33)
	bloque_sentencias : bloque_sentencias . sentencia  (34)

	error  shift 61
	ID  shift 15
	IF  shift 16
	END  shift 62
	PRINT  shift 17
	WHILE  shift 18
	.  error

	sentencia  goto 58
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	error_iteracion  goto 29
	if_condicion  goto 30


state 32
	sentencia_de_clase : CLASS ID . $$1 definicion_clase  (13)
	sentencia_de_clase : CLASS ID . $$2 EXTENDS ID definicion_clase  (15)
	$$1 : .  (12)
	$$2 : .  (14)

	BEGIN  reduce 12
	EXTENDS  reduce 14

	$$1  goto 63
	$$2  goto 64


state 33
	conjunto_sentencias : conj_sentencias_declarativas sentencias_ejecutables .  (2)

	.  reduce 2


state 34
	conj_sentencias_declarativas : sentencia_declarativa conj_sentencias_declarativas .  (6)

	.  reduce 6


state 35
	variable : ID .  (11)

	.  reduce 11


state 36
	sentencia_declarativa : tipo lista_de_variables . ';'  (7)
	lista_de_variables : lista_de_variables . ',' variable  (9)

	';'  shift 65
	','  shift 66
	.  error


state 37
	lista_de_variables : variable .  (10)

	.  reduce 10


state 38
<<<<<<< HEAD
	asig : error ASIGNACION . expresion ';'  (86)
=======
	asig : error ASIGNACION . expresion ';'  (87)
>>>>>>> RobertoPintos-patch-1

	ID  shift 40
	CTE  shift 41
	CTEFLOAT  shift 43
	'-'  shift 45
	.  error

	expresion  goto 67
	termino  goto 47
	factor  goto 48
	cte  goto 49


state 39
	error_inv_metodo_clase : error '.' . ID '(' ')' ';'  (44)

	ID  shift 68
	.  error


state 40
<<<<<<< HEAD
	factor : ID .  (94)
	factor : ID . '.' ID  (95)

	'.'  shift 69
	error  reduce 94
	ID  reduce 94
	C_MAYORIGUAL  reduce 94
	C_MENORIGUAL  reduce 94
	C_DISTINTO  reduce 94
	IF  reduce 94
	ELSE  reduce 94
	END_IF  reduce 94
	BEGIN  reduce 94
	END  reduce 94
	PRINT  reduce 94
	WHILE  reduce 94
	C_IGUAL  reduce 94
	';'  reduce 94
	')'  reduce 94
	'<'  reduce 94
	'>'  reduce 94
	'+'  reduce 94
	'-'  reduce 94
	'*'  reduce 94
	'/'  reduce 94


state 41
	cte : CTE .  (97)

	.  reduce 97


state 42
	asig : ID ASIGNACION . expresion ';'  (83)
	asig : ID ASIGNACION . expresion  (87)
=======
	factor : ID .  (95)
	factor : ID . '.' ID  (96)

	'.'  shift 69
	error  reduce 95
	ID  reduce 95
	C_MAYORIGUAL  reduce 95
	C_MENORIGUAL  reduce 95
	C_DISTINTO  reduce 95
	IF  reduce 95
	ELSE  reduce 95
	END_IF  reduce 95
	BEGIN  reduce 95
	END  reduce 95
	PRINT  reduce 95
	WHILE  reduce 95
	C_IGUAL  reduce 95
	';'  reduce 95
	')'  reduce 95
	'<'  reduce 95
	'>'  reduce 95
	'='  reduce 95
	'+'  reduce 95
	'-'  reduce 95
	'*'  reduce 95
	'/'  reduce 95


state 41
	cte : CTE .  (98)

	.  reduce 98


state 42
	asig : ID ASIGNACION . expresion ';'  (84)
	asig : ID ASIGNACION . expresion  (88)
>>>>>>> RobertoPintos-patch-1

	ID  shift 40
	CTE  shift 41
	CTEFLOAT  shift 43
	'-'  shift 45
	.  error

	expresion  goto 70
	termino  goto 47
	factor  goto 48
	cte  goto 49


state 43
<<<<<<< HEAD
	cte : CTEFLOAT .  (99)

	.  reduce 99
=======
	cte : CTEFLOAT .  (100)

	.  reduce 100
>>>>>>> RobertoPintos-patch-1


state 44
	invocacion_metodo_clase : ID '.' . ID '(' ')' ';'  (42)
	error_inv_metodo_clase : ID '.' . error '(' ')' ';'  (45)
	error_inv_metodo_clase : ID '.' . error ')' ';'  (46)
	error_inv_metodo_clase : ID '.' . ID '(' error ';'  (47)
	error_inv_metodo_clase : ID '.' . ID '(' ')' error  (48)
<<<<<<< HEAD
	asig : ID '.' . ID ASIGNACION expresion ';'  (84)
=======
	asig : ID '.' . ID ASIGNACION expresion ';'  (85)
>>>>>>> RobertoPintos-patch-1

	error  shift 71
	ID  shift 72
	.  error


state 45
<<<<<<< HEAD
	cte : '-' . CTE  (98)
	cte : '-' . CTEFLOAT  (100)
=======
	cte : '-' . CTE  (99)
	cte : '-' . CTEFLOAT  (101)
>>>>>>> RobertoPintos-patch-1

	CTE  shift 73
	CTEFLOAT  shift 74
	.  error


state 46
<<<<<<< HEAD
	asig : ID expresion . ';'  (85)
	expresion : expresion . '+' termino  (88)
	expresion : expresion . '-' termino  (89)
=======
	asig : ID expresion . ';'  (86)
	expresion : expresion . '+' termino  (89)
	expresion : expresion . '-' termino  (90)
>>>>>>> RobertoPintos-patch-1

	';'  shift 75
	'+'  shift 76
	'-'  shift 77
	.  error


state 47
<<<<<<< HEAD
	expresion : termino .  (90)
	termino : termino . '*' factor  (91)
	termino : termino . '/' factor  (92)

	'*'  shift 78
	'/'  shift 79
	error  reduce 90
	ID  reduce 90
	C_MAYORIGUAL  reduce 90
	C_MENORIGUAL  reduce 90
	C_DISTINTO  reduce 90
	IF  reduce 90
	ELSE  reduce 90
	END_IF  reduce 90
	BEGIN  reduce 90
	END  reduce 90
	PRINT  reduce 90
	WHILE  reduce 90
	C_IGUAL  reduce 90
	';'  reduce 90
	')'  reduce 90
	'<'  reduce 90
	'>'  reduce 90
	'+'  reduce 90
	'-'  reduce 90


state 48
	termino : factor .  (93)

	.  reduce 93


state 49
	factor : cte .  (96)

	.  reduce 96


state 50
	if_condicion : IF '(' . condicion ')' $$8 bloque_anidado_if  (75)
	if_condicion : IF '(' . condicion bloque_anidado_if  (77)
=======
	expresion : termino .  (91)
	termino : termino . '*' factor  (92)
	termino : termino . '/' factor  (93)

	'*'  shift 78
	'/'  shift 79
	error  reduce 91
	ID  reduce 91
	C_MAYORIGUAL  reduce 91
	C_MENORIGUAL  reduce 91
	C_DISTINTO  reduce 91
	IF  reduce 91
	ELSE  reduce 91
	END_IF  reduce 91
	BEGIN  reduce 91
	END  reduce 91
	PRINT  reduce 91
	WHILE  reduce 91
	C_IGUAL  reduce 91
	';'  reduce 91
	')'  reduce 91
	'<'  reduce 91
	'>'  reduce 91
	'='  reduce 91
	'+'  reduce 91
	'-'  reduce 91


state 48
	termino : factor .  (94)

	.  reduce 94


state 49
	factor : cte .  (97)

	.  reduce 97


state 50
	if_condicion : IF '(' . condicion ')' $$8 bloque_anidado_if  (76)
	if_condicion : IF '(' . condicion bloque_anidado_if  (78)
>>>>>>> RobertoPintos-patch-1

	ID  shift 40
	CTE  shift 41
	CTEFLOAT  shift 43
	'-'  shift 45
	.  error

	condicion  goto 80
	expresion  goto 52
	termino  goto 47
	factor  goto 48
	cte  goto 49


state 51
<<<<<<< HEAD
	if_condicion : IF condicion . ')' bloque_anidado_if  (76)
	if_condicion : IF condicion . bloque_anidado_if  (78)
=======
	if_condicion : IF condicion . ')' bloque_anidado_if  (77)
	if_condicion : IF condicion . bloque_anidado_if  (79)
>>>>>>> RobertoPintos-patch-1

	error  shift 81
	ID  shift 15
	IF  shift 16
	BEGIN  shift 82
	PRINT  shift 17
	WHILE  shift 18
	')'  shift 83
	.  error

	sentencia  goto 84
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	error_iteracion  goto 29
	if_condicion  goto 30
	bloque_anidado_if  goto 85


state 52
	condicion : expresion . $$6 comparador expresion  (60)
<<<<<<< HEAD
	expresion : expresion . '+' termino  (88)
	expresion : expresion . '-' termino  (89)
=======
	expresion : expresion . '+' termino  (89)
	expresion : expresion . '-' termino  (90)
>>>>>>> RobertoPintos-patch-1
	$$6 : .  (59)

	'+'  shift 76
	'-'  shift 77
	C_MAYORIGUAL  reduce 59
	C_MENORIGUAL  reduce 59
	C_DISTINTO  reduce 59
	C_IGUAL  reduce 59
	'<'  reduce 59
	'>'  reduce 59
<<<<<<< HEAD
=======
	'='  reduce 59
>>>>>>> RobertoPintos-patch-1

	$$6  goto 86


state 53
	error_print : PRINT error . CADENA ')' ';'  (51)

	CADENA  shift 87
	.  error


state 54
	print : PRINT '(' . CADENA ')' ';'  (49)
	error_print : PRINT '(' . CADENA error ';'  (52)
	error_print : PRINT '(' . CADENA ')' error  (53)

	CADENA  shift 88
	.  error


state 55
	error_iteracion : WHILE error . condicion ')' DO bloque_anidado_while  (58)

	ID  shift 40
	CTE  shift 41
	CTEFLOAT  shift 43
	'-'  shift 45
	.  error

	condicion  goto 89
	expresion  goto 52
	termino  goto 47
	factor  goto 48
	cte  goto 49


state 56
	iteracion : WHILE $$4 . '(' condicion ')' $$5 DO bloque_anidado_while  (56)

	'('  shift 90
	.  error


state 57
	sentencias_ejecutables : error bloque_sentencias END . ';'  (31)

	';'  shift 91
	.  error


state 58
	bloque_sentencias : bloque_sentencias sentencia .  (34)

	.  reduce 34


state 59
<<<<<<< HEAD
	seleccion : if_condicion END_IF .  (71)

	.  reduce 71


state 60
	seleccion : if_condicion $$7 . ELSE bloque_anidado_if END_IF  (73)
=======
	seleccion : if_condicion END_IF .  (72)

	.  reduce 72


state 60
	seleccion : if_condicion $$7 . ELSE bloque_anidado_if END_IF  (74)
>>>>>>> RobertoPintos-patch-1

	ELSE  shift 92
	.  error


state 61
	sentencias_ejecutables : BEGIN bloque_sentencias error . ';'  (32)
	error_inv_metodo_clase : error . '.' ID '(' ')' ';'  (44)
<<<<<<< HEAD
	asig : error . ASIGNACION expresion ';'  (86)
=======
	asig : error . ASIGNACION expresion ';'  (87)
>>>>>>> RobertoPintos-patch-1

	ASIGNACION  shift 38
	';'  shift 93
	'.'  shift 39
	.  error


state 62
	sentencias_ejecutables : BEGIN bloque_sentencias END . ';'  (30)
	sentencias_ejecutables : BEGIN bloque_sentencias END . error  (33)

	error  shift 94
	';'  shift 95
	.  error


state 63
	sentencia_de_clase : CLASS ID $$1 . definicion_clase  (13)

	BEGIN  shift 96
	.  error

	definicion_clase  goto 97


state 64
	sentencia_de_clase : CLASS ID $$2 . EXTENDS ID definicion_clase  (15)

	EXTENDS  shift 98
	.  error


state 65
	sentencia_declarativa : tipo lista_de_variables ';' .  (7)

	.  reduce 7


state 66
	lista_de_variables : lista_de_variables ',' . variable  (9)

	ID  shift 35
	.  error

	variable  goto 99


state 67
<<<<<<< HEAD
	asig : error ASIGNACION expresion . ';'  (86)
	expresion : expresion . '+' termino  (88)
	expresion : expresion . '-' termino  (89)
=======
	asig : error ASIGNACION expresion . ';'  (87)
	expresion : expresion . '+' termino  (89)
	expresion : expresion . '-' termino  (90)
>>>>>>> RobertoPintos-patch-1

	';'  shift 100
	'+'  shift 76
	'-'  shift 77
	.  error


state 68
	error_inv_metodo_clase : error '.' ID . '(' ')' ';'  (44)

	'('  shift 101
	.  error


state 69
<<<<<<< HEAD
	factor : ID '.' . ID  (95)
=======
	factor : ID '.' . ID  (96)
>>>>>>> RobertoPintos-patch-1

	ID  shift 102
	.  error


state 70
<<<<<<< HEAD
	asig : ID ASIGNACION expresion . ';'  (83)
	asig : ID ASIGNACION expresion .  (87)
	expresion : expresion . '+' termino  (88)
	expresion : expresion . '-' termino  (89)
=======
	asig : ID ASIGNACION expresion . ';'  (84)
	asig : ID ASIGNACION expresion .  (88)
	expresion : expresion . '+' termino  (89)
	expresion : expresion . '-' termino  (90)
>>>>>>> RobertoPintos-patch-1

	';'  shift 103
	'+'  shift 76
	'-'  shift 77
<<<<<<< HEAD
	error  reduce 87
	ID  reduce 87
	IF  reduce 87
	ELSE  reduce 87
	END_IF  reduce 87
	END  reduce 87
	PRINT  reduce 87
	WHILE  reduce 87
=======
	error  reduce 88
	ID  reduce 88
	IF  reduce 88
	ELSE  reduce 88
	END_IF  reduce 88
	END  reduce 88
	PRINT  reduce 88
	WHILE  reduce 88
>>>>>>> RobertoPintos-patch-1


state 71
	error_inv_metodo_clase : ID '.' error . '(' ')' ';'  (45)
	error_inv_metodo_clase : ID '.' error . ')' ';'  (46)

	'('  shift 104
	')'  shift 105
	.  error


state 72
	invocacion_metodo_clase : ID '.' ID . '(' ')' ';'  (42)
	error_inv_metodo_clase : ID '.' ID . '(' error ';'  (47)
	error_inv_metodo_clase : ID '.' ID . '(' ')' error  (48)
<<<<<<< HEAD
	asig : ID '.' ID . ASIGNACION expresion ';'  (84)
=======
	asig : ID '.' ID . ASIGNACION expresion ';'  (85)
>>>>>>> RobertoPintos-patch-1

	ASIGNACION  shift 106
	'('  shift 107
	.  error


state 73
<<<<<<< HEAD
	cte : '-' CTE .  (98)

	.  reduce 98


state 74
	cte : '-' CTEFLOAT .  (100)

	.  reduce 100


state 75
	asig : ID expresion ';' .  (85)

	.  reduce 85


state 76
	expresion : expresion '+' . termino  (88)
=======
	cte : '-' CTE .  (99)

	.  reduce 99


state 74
	cte : '-' CTEFLOAT .  (101)

	.  reduce 101


state 75
	asig : ID expresion ';' .  (86)

	.  reduce 86


state 76
	expresion : expresion '+' . termino  (89)
>>>>>>> RobertoPintos-patch-1

	ID  shift 40
	CTE  shift 41
	CTEFLOAT  shift 43
	'-'  shift 45
	.  error

	termino  goto 108
	factor  goto 48
	cte  goto 49


state 77
<<<<<<< HEAD
	expresion : expresion '-' . termino  (89)
=======
	expresion : expresion '-' . termino  (90)
>>>>>>> RobertoPintos-patch-1

	ID  shift 40
	CTE  shift 41
	CTEFLOAT  shift 43
	'-'  shift 45
	.  error

	termino  goto 109
	factor  goto 48
	cte  goto 49


state 78
<<<<<<< HEAD
	termino : termino '*' . factor  (91)
=======
	termino : termino '*' . factor  (92)
>>>>>>> RobertoPintos-patch-1

	ID  shift 40
	CTE  shift 41
	CTEFLOAT  shift 43
	'-'  shift 45
	.  error

	factor  goto 110
	cte  goto 49


state 79
<<<<<<< HEAD
	termino : termino '/' . factor  (92)
=======
	termino : termino '/' . factor  (93)
>>>>>>> RobertoPintos-patch-1

	ID  shift 40
	CTE  shift 41
	CTEFLOAT  shift 43
	'-'  shift 45
	.  error

	factor  goto 111
	cte  goto 49


state 80
<<<<<<< HEAD
	if_condicion : IF '(' condicion . ')' $$8 bloque_anidado_if  (75)
	if_condicion : IF '(' condicion . bloque_anidado_if  (77)
=======
	if_condicion : IF '(' condicion . ')' $$8 bloque_anidado_if  (76)
	if_condicion : IF '(' condicion . bloque_anidado_if  (78)
>>>>>>> RobertoPintos-patch-1

	error  shift 81
	ID  shift 15
	IF  shift 16
	BEGIN  shift 82
	PRINT  shift 17
	WHILE  shift 18
	')'  shift 112
	.  error

	sentencia  goto 84
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	error_iteracion  goto 29
	if_condicion  goto 30
	bloque_anidado_if  goto 113


state 81
	error_inv_metodo_clase : error . '.' ID '(' ')' ';'  (44)
<<<<<<< HEAD
	bloque_anidado_if : error . bloque_sentencias END  (82)
	asig : error . ASIGNACION expresion ';'  (86)
=======
	bloque_anidado_if : error . bloque_sentencias END  (83)
	asig : error . ASIGNACION expresion ';'  (87)
>>>>>>> RobertoPintos-patch-1

	error  shift 14
	ID  shift 15
	ASIGNACION  shift 38
	IF  shift 16
	PRINT  shift 17
	WHILE  shift 18
	'.'  shift 39
	.  error

	bloque_sentencias  goto 114
	sentencia  goto 20
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	error_iteracion  goto 29
	if_condicion  goto 30


state 82
<<<<<<< HEAD
	bloque_anidado_if : BEGIN . bloque_sentencias END  (80)
	bloque_anidado_if : BEGIN . bloque_sentencias error  (81)
=======
	bloque_anidado_if : BEGIN . bloque_sentencias END  (81)
	bloque_anidado_if : BEGIN . bloque_sentencias error  (82)
>>>>>>> RobertoPintos-patch-1

	error  shift 14
	ID  shift 15
	IF  shift 16
	PRINT  shift 17
	WHILE  shift 18
	.  error

	bloque_sentencias  goto 115
	sentencia  goto 20
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	error_iteracion  goto 29
	if_condicion  goto 30


state 83
<<<<<<< HEAD
	if_condicion : IF condicion ')' . bloque_anidado_if  (76)
=======
	if_condicion : IF condicion ')' . bloque_anidado_if  (77)
>>>>>>> RobertoPintos-patch-1

	error  shift 81
	ID  shift 15
	IF  shift 16
	BEGIN  shift 82
	PRINT  shift 17
	WHILE  shift 18
	.  error

